style.css
/* ... */
.btn-reset {
	padding: 0;
	border: none;
	background-color: transparent;
	cursor: pointer;
}

:root {
	--accent-color: #0c68f5;
	--dark-color: #2F2222;
	--grid-gap: 40px;
}

body {
	overflow-anchor: none;
	margin: 0;
	font-family: "Futura PT", sans-serif;
	font-weight: 400;
	background-color: #f9f9f9;
}

.container {
	max-width: 1200px;
	padding: 0 15px;
	margin: 0 auto;
}

blockquote {
    margin: 0;
}

#breadcrumbs {
    color: rgba(47, 34, 34, 0.4);
    background-color: #F9F9F9;
}

span.accent {
	color: var(--accent-color);
}

.visually-hidden {
	position: absolute !important;
	clip: rect(1px 1px 1px 1px);
	/* IE6, IE7 */
	clip: rect(1px, 1px, 1px, 1px);
	padding: 0 !important;
	border: 0 !important;
	height: 1px !important;
	width: 1px !important;
	overflow: hidden;
}

.blog-title {
	margin: 0;
	font-weight: 500;
	font-size: 24px;
	line-height: 31px;
	color: var(--dark-color);
}

.form-input {
	width: 100%;
	border-radius: 20px;
	background: #f5f5f5;
	padding-left: 30px;
	height: 50px;
	font-family: 'Futura PT',
		sans-serif;
	font-weight: 400;
	font-size: 18px;
	line-height: 23px;
	color: rgba(47, 34, 34, 0.4);
	border: none;
	display: block;
}

.form-btn {
	width: 100%;
	border-radius: 20px;
	height: 50px;
	background-color: var(--accent-color);
	font-family: 'Futura PT',
		sans-serif;
	font-weight: 400;
	font-size: 18px;
	line-height: 23px;
	color: #fff;
	display: flex;
	align-items: center;
	justify-content: center;
}

.form-btn span {
	margin-right: 12px;
}



/* === header === */
.header {
	position: relative;
	
	background-color: #fff;
}

.header__container {
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.header__logo {
	transform: translateY(5px);
	max-width: 56%;
	padding: 10px;
}

.header__logo img {
	width: 70%;
}

.header__right {
	display: flex;
	align-items: center;
}

.menu-nav {
	margin-right: var(--grid-gap);
	display: flex;
	align-items: center;
}

.hamburger-menu {
    display: none;
}

.menu {
	display: flex;
	align-items: center;
	list-style: none;
	margin: 0;
	padding: 0;
	margin-right: var(--grid-gap);
}

.menu-item:not(:last-child) {
	margin-right: var(--grid-gap);
}

.menu-item a {
	position: relative;
	font-size: 18px;
	color: var(--dark-color);
}

.menu-item a:hover {
	color: var(--accent-color);
}

.search-link {
	position: relative;
	font-size: 18px;
	color: var(--dark-color);
}

.menu-item a[aria-current] {
	color: var(--accent-color);
}

.menu-item a[aria-current]::after {
	content: "";
	position: absolute;
	left: 0;
	bottom: 0;
	width: 100%;
	height: 2px;
	background-color: currentColor;
}

.phone {
	font-size: 18px;
	font-weight: 500;
	color: var(--accent-color);
	background-image: url(./img/phone.svg);
	background-position: left center;
	background-repeat: no-repeat;
	padding-left: 24px;
}

.banner {
	height: 180px;
    background-color: #f1f2f8;
    display: flex;
    align-items: center;
    justify-content: center;
}

.content {
	padding-top: var(--grid-gap);
	padding-bottom: 110px;
}

.content__container {
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	gap: var(--grid-gap);
}

.posts {
	grid-column: 3 span;
}

.blog-post {
	position: relative;
	padding: var(--grid-gap);
	width: 100%;
	height: 100%;
	border-radius: 20px;
	background-color: #fff;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
	transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
}

.blog-post__category {
	position: relative;
	z-index: 5;
	margin-bottom: 30px;
	display: inline-block;
	border-radius: 8px;
	padding: 8px 17px;
	font-size: 16px;
	line-height: 21px;
	color: var(--accent-color);
	background:#f7f8fD;
}

.blog-post__category:hover {
	background: rgba(93, 113, 221, 0.15);
}

.blog-post__title {
	margin-bottom: 20px;
}

.blog-post__link::before {
	content: "";
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
}

.blog-post__descr {
	margin: 0;
	padding-right: var(--grid-gap);
	font-size: 18px;
	line-height: 23px;
	color: rgba(47, 34, 34, 0.4);
}

.blog-post__date {
	position: absolute;
	right: var(--grid-gap);
	top: var(--grid-gap);
	font-size: 16px;
	line-height: 21px;
	color: rgba(47, 34, 34, 0.4);
}

.blog-post--main {
	height: 280px;
	margin-bottom: var(--grid-gap);
}

.post-grid {
	margin-bottom: 90px;
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	/* grid-template-rows: repeat(8, 180px); */
	gap: var(--grid-gap);
}

.post-grid__item:nth-child(5n+1) {
	grid-column: 2 span;
	grid-row: 2 span;
	min-height: 400px;
}

.post-grid__item:nth-child(5n+2) {
	grid-row: 2 span;
}

.post-grid__item:nth-child(5n+2) .blog-post__category:hover {
	background: rgba(255, 255, 255, 0.4);
}

.post-grid__item:nth-child(5n+3) .blog-post__category:hover {
	background: rgba(255, 255, 255, 0.4);
}

.post-grid__item:nth-child(5n+3) {
	grid-row: 2 span;
}

.post-grid__item:nth-child(5n+4) {
	grid-column: 2 span;
}

.post-grid__item:nth-child(5n+5) {
	grid-column: 2 span;
}

.post-grid__item:nth-child(5n+2) .blog-post {
	background: var(--accent-color);
	padding-left: 30px;
	padding-right: 30px;
}

.post-grid__item:nth-child(5n+2) .blog-post__category {
	background: #7D8DFF;
	color: #fff;
}

.post-grid__item:nth-child(5n+2) .blog-post__title {
	color: #fff;
}

.post-grid__item:nth-child(5n+2) .blog-post__date {
	top: auto;
	right: auto;
	bottom: var(--grid-gap);
	left: 30px;
	color: #fff;
}

.post-grid__item:nth-child(5n+2) .blog-post__descr {
	display: none;
}

.post-grid__item:nth-child(5n+3) .blog-post {
	background: var(--accent-color);
	padding-left: 30px;
	padding-right: 30px;
}

.post-grid__item:nth-child(5n+3) .blog-post__category {
	background: #7D8DFF;
	color: #fff;
}

.post-grid__item:nth-child(5n+3) .blog-post__title {
	color: #fff;
}

.post-grid__item:nth-child(5n+3) .blog-post__date {
	top: auto;
	right: auto;
	bottom: var(--grid-gap);
	left: 30px;
	color: #fff;
}

.post-grid__item:nth-child(5n+3) .blog-post__descr {
	display: none;
}
/* ... */

